public class Main {

    public static void main(String[] args) {
        //Creates instance of a tournament and runs it
        Tournament tournament = new Tournament();
        tournament.run();
    }

}
